--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: "Nunito Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+:root{
+  --font_color_1: #333333;
+  --font_color_2: #4F4F4F;
 }
