--- a/src/app/compenents/trapezium-container/TrapeziumContainer.module.css
+++ b/src/app/compenents/trapezium-container/TrapeziumContainer.module.css
@@ -4,7 +4,7 @@
     height: 100vh;
 }
 
-.trapezium-container-left{
+.trapezium-container-left {
     direction: rtl;
 }
 
@@ -21,7 +21,7 @@
     color: var(--font_color_1);
 }
 
-.trapezium-container .matter p{
+.trapezium-container .matter p {
     font-size: 1.2rem;
     color: var(--font_color_2);
 }
@@ -31,16 +31,52 @@
     height: 100vh;
     width: 100%;
     object-fit: cover;
-    background-color: red;
     clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
 }
 
-.trapezium-container-left img{
+.trapezium-container-left img {
     clip-path: polygon(0 0, 0 100%, 80% 100%, 100% 0);
 }
 
-.trapezium-container-left .matter{
+.trapezium-container-left .matter {
     padding-left: 0;
     padding-right: 7rem;
-    text-align: left;
+    direction: ltr;
+}
+
+
+@media screen and (max-width: 450px) {
+    .trapezium-container {
+        grid-template-columns: 1fr;
+        margin-top: 5rem;
+        text-align: center;
+    }
+
+    .trapezium-container .matter h2 {
+
+        font-size: 1.5rem;
+    }
+
+    .trapezium-container img {
+        clip-path: none;
+    }
+
+
+}
+
+@media screen and (max-width: 850px) {
+
+    .trapezium-container {
+        height: unset;
+        min-height: 50vh;
+    }
+
+    .trapezium-container img {
+        height: unset;
+        min-height: 50vh;
+    }
+
+    .trapezium-container .matter {
+        padding: 1rem;
+    }
 }
